kubernetes/clusters/live/config/palworld/network-policy.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: palworld-default
  namespace: palworld
spec:
  description: "Allow Palworld game server: UDP game + query traffic, TCP RCON from cluster, HTTPS egress for SteamCMD"
  endpointSelector: { }
  ingress:
    - fromEntities:
        - world
      toPorts:
        - ports:
            - port: "8211"
              protocol: UDP
            - port: "27015"
              protocol: UDP
    - fromCIDR:
        - ${cluster_node_subnet}
      toPorts:
        - ports:
            - port: "25575"
              protocol: TCP
  egress:
    # Game server sends UDP responses to connected clients
    - toEntities:
        - world
      toPorts:
        - ports:
            - port: "8211"
              protocol: UDP
            - port: "27015"
              protocol: UDP
    # SteamCMD downloads and Steam authentication
    - toEntities:
        - world
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
